--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gradient Background</title>
+    <title>Uifry</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/svg" href="assets/images/logo_favi.svg" />
   </head>
   <body>
     <div class="navbar">
